[tool.poetry]
name = "zninit"
version = "0.1.10"
description = "Descriptor based dataclass implementation"
authors = ["zincwarecode <zincwarecode@gmail.com>"]
license = "Apache-2.0"
keywords = ["dataclass", "descriptor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typeguard = {version = "^2.13.3", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
pylint = "^2.15.2"
perflint = "^0.7.3"
pre-commit = "^2.20.0"

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^3.4.7"


[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
ruff = "^0.0.255"
isort = "^5.12.0"

[tool.poetry.extras]
typeguard = ["typeguard"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
repository = "https://github.com/zincware/ZnInit"

[tool.black]
line-length = 90
preview = true

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.pylint.messages_control]

max-line-length = 90

disable = [
    "logging-fstring-interpolation",
    "use-list-copy", # I do not understand this one
]

[tool.ruff]
line-length = 90

select = ["E", "F", "D", "N", "C"] #, "ANN"]
extend-ignore = [
    "D213", "D203", "N802"
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tmp",
]